tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/PHP72ErrorReportingTests#PHP72ErrorReportingTests(String[]).mjava
	public PHP72ErrorReportingTests(String[] fileNames) {
		super(fileNames);
	}

